Modificacion de /.htaccess Cambio en la URL de redireccion para U-Pasaporte Actualizacion a CodeIgniter 2.1.0

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
-    RewriteBase /~cluch/votaciones
+    RewriteBase /
 
     # Forzar HTTPS
     RewriteCond %{HTTPS} !=on
